# alpha_bsc_src

./: .clang-format  .gitignore  clear_run.sh  copy_from_smallvoice.sh  delete_run.sh  eval.sh  init_db.sh  init_run.sh  load_run.sh  local_train_cycle.py  move_symlink.sh  num_gens.sh  readme.md  reset_run.sh  resources.sh  save_run.sh  self_play.sh  slurm-5685.out  symlink_db.sh  symlink_training_data.sh  train.sh  train_cycle.py  train_cycle.sh
breakthrough_gui/: .gitignore  main.py  out
cpp_src/: .gitignore  CMakeLists.txt  CMakeLists_local.txt  Makefile  delete_cache.sh  eval_agent  eval_agent.cpp  global.h  hyperparams.h  main.cpp  play_agent  play_agent.cpp  pybinds.cpp  self_play.cpp  setup.py  switch_local_remote.sh  test  test.cpp
cpp_src/DB/: db.cpp  db.h
cpp_src/MCTS/: agent.cpp  agent.h  mc_node.cpp  mc_node.h  mc_tree.cpp  mc_tree.h
cpp_src/NN/: breakthrough_nn.cpp  breakthrough_nn.h  connect4_nn.cpp  connect4_nn.h  nn.cpp  nn.h
cpp_src/base/: bitboard.h  board.h  types.h
cpp_src/competitor/: competitor.cpp  competitor.h  conn4_perfect.cpp  conn4_perfect.h
cpp_src/config/: config.cpp  config.h
cpp_src/config_files/: hyperparameters.json
cpp_src/conn4_alpha_beta/: .gitignore  MoveSorter.hpp  OpeningBook.hpp  Position.hpp  Solver.cpp  Solver.hpp  TranspositionTable.hpp  generator.cpp
cpp_src/games/: breakthrough.cpp  breakthrough.h  connect4.cpp  connect4.h  game.h  move.h
cpp_src/misc/: perft.cpp  perft.h
cpp_src/player.egg-info/: PKG-INFO  SOURCES.txt
cpp_src/self-play/: selfplay.cpp  selfplay.h
cpp_src/simulation/: endgame_playouts.h  evaluation.cpp  mutual.cpp  mutual.h  self_play.cpp  simulation.cpp  simulation.cpp.new  simulation.h  structs.h
cpp_src/utils/: colors.h  dirichlet.cpp  dirichlet.h  random.cpp  random.h  strings.h  thread_pool.h  thread_queue.h  timer.h  utils.cpp  utils.h  uuid.cpp  uuid.h
cpp_src/vanilla_MCTS/: v_agent.cpp  v_agent.h  v_mc_node.cpp  v_mc_node.h  v_mc_tree.cpp  v_mc_tree.h
db/: configure_db.sql  connect4_openings.json  db.db  empty_db.db  openings.json  test_data.json
db/competitions/breakthrough/DEFAULT_5000_gamesvsDEFAULT_5000_games_const_100/: results.csv  title.txt
db/competitions/breakthrough/DEFAULT_5000_gamesvsDYN_WINDOW_const_1.0/: results.csv
db/competitions/breakthrough/DEFAULT_5000_gamesvsENDGAME_PLAYOUTS_uniat100_few_games/: results.csv
db/competitions/breakthrough/DEFAULT_5000_gamesvsENDGAME_PLAYOUTS_uniat100_few_games_const_1.0/: results.csv
db/competitions/perfect/MONOTONE_deterministic/: results.csv
logs/: procs.txt
md_src/: final_presentation.md  formulas.md  fundur_mars_27.md  improvement_ideas.md  meeting_1_march.md  meeting_6_march.md  meeting_april_24.md  notes.md  old_presentation.md  paper_notes.md  stodufundur_29_mars.md  todo_22_mars.md  todo_27_mars.md  todo_final.md
models/connect4/: 0.pt
py_src/: .gitignore  compete.py  config.py  eval_analysis.py  evals.py  evaluate_training_data.py  fix_db.py  generate_connect4_openings.py  generate_test_data.py  graph_competition.py  graph_competitions_together.py  init_conn4_net.py  init_nn.py  look_at_training_data.ipynb  make_competition_results.py  make_num_playouts.py  mariadb_py_fix.sh  measure.py  play_perfect_competitor.py  re_eval_run.py  requirements.txt  test.ipynb  test2.ipynb  test_data.json  train.py  visualize_sigmoid.py
py_src/DB/: __init__.py  db.py  db_config.py
py_src/conn4_alpha_beta/: OpeningBook.hpp  lib.cpp  setup.py  test.py
py_src/nn_definitions/: __init__.py  breakthrough_nn.py  connect4_nn.py  nn_base.py
py_src/other/: default_big_window.csv  default_high_lr_connect4.csv  default_hlr.csv  dyn_window_high_lr.csv  endgame_big_window.csv  endgame_normal_window.csv  monotone.csv  plot_with_friends.py  plot_with_squad.py  random_cap.csv  random_cap_more_games.csv
py_src/prefetch/: __init__.py  prefetch.py
py_src/training/: __init__.py  dataset.py  losses.py  model.py
py_src/utils/: __init__.py  utils.py
py_src/visualization/: evals.py
sql_src/: configure_db.sql  make_tables.sql
vault/breakthrough/DEFAULT/: cpp_hyperparameters.json  py_config.json
vault/breakthrough/DEFAULT_5000_games/: cpp_hyperparameters.json  num_playouts.json
vault/breakthrough/ENDGAME_PLAYOUTS/: cpp_hyperparameters.json  py_config.json
vault/breakthrough/ENDGAME_PLAYOUTS_uniat100_few_games/: cpp_hyperparameters.json  num_playouts.json  py_config.json
vault/breakthrough/ENDGAME_PLAYOUTS_uniat100_low_base/: cpp_hyperparameters.json
vault/breakthrough/b_test/: cpp_hyperparameters.json  py_config.json
vault/breakthrough/breakthrough_test/: cpp_hyperparameters.json  py_config.json
vault/breakthrough/defaults/: cpp_hyperparameters.json  py_config.json
vault/breakthrough/end_play_models/: cpp_hyperparameters.json
vault/connect4/DEFAULT_high_lr/: 7x6.book  config.py  cpp_hyperparameters.json  py_config.json
vault/connect4/DYN_WINDOW/: cpp_hyperparameters.json  db_old.db  py_config.json  training_data
vault/connect4/DYN_WINDOW__ENDGAME/: REMEMBER.txt  db_old.db  py_config.json  training_data
vault/connect4/DYN_WINDOW__ENDGAME_high_lr/: py_config.json  training_data
vault/connect4/DYN_WINDOW_high_lr/: cpp_hyperparameters.json  py_config.json  training_data
vault/connect4/ENDGAME/: py_config.json
vault/connect4/ENDGAME_PLAYOUTS/: cpp_hyperparameters.json
vault/connect4/ENDGAME_PLAYOUTS_BIG_WINDOW/: cpp_hyperparameters.json  db.db-journal  num_playouts.json  py_config.json
vault/connect4/ENDGAME_PLAYOUTS_HIGH_GEN_UNI/: py_config.json
vault/connect4/ENDGAME_PLAYOUTS_HIGH_GEN_UNI_BIG_WINDOW/: cpp_hyperparameters.json  py_config.json
vault/connect4/ENDGAME_SAMPLING/: py_config.json  training_data
vault/connect4/defaults/: cpp_hyperparameters.json  py_config.json
vault/connect4/endgame_playouts/: cpp_hyperparameters.json  py_config.json  td_evaluations.csv
vault/connect4/endgame_playouts_hgu_bw/: cpp_hyperparameters.json  py_config.json
vault/connect4/mono_mcts/: cpp_hyperparameters.json  py_config.json
vault/connect4/test_run/: config.py  cpp_hyperparameters.json  py_config.json
(+26 files in other folders)
